--- a/files/html_chunks/3_tab_explanation_Illumina.html
+++ b/files/html_chunks/3_tab_explanation_Illumina.html
@@ -3,7 +3,7 @@
 <div id="standardTab">
     <ul>
         <li> Pick a sample to open the Interactive Genome Viewer </li>
-        <li> The first "segment" within the given reference is automatically loaded, you can view a specific segment with the dropdown menu. </li>
-        <li> Be aware that loading might take a very long time depending on the size of the scaffold and the sequencing depth. 
+        <li> The first "segment" within the given reference is automatically loaded, you can view a specific segment with the dropdown menu. Be aware that loading might take a very long time depending on the size of the segment and the sequencing depth. </li>
+        <li> N.B. the viewer shows two tracks of SNPs: the top track shows majority SNPs, these are overwritten and included in the consensus sequence. The track beneath the ORF annotation shows minority SNPs, these are not included in the consensus genome, might represent quasispecies, and are flagged for manual inspection. </li>
     </ul>
 </div>
